# jni-cmake

./: .gitignore  CMakeLists.txt  README.md  pom.xml
native/: com_damonyuan_jni_HelloWorldJNI.cpp  com_damonyuan_jni_HelloWorldJNI.h
src/main/java/com/damonyuan/jni/: HelloWorldJNI.java
src/main/resources/: MANIFEST.MF
